# tiny-csgo-client

./: CMakeLists.txt  README.md  build.bat  build.sh  cl-main.cpp
include/: GCClient.hpp  argparser.hpp  client.hpp
include/common/: IceKey.cpp  bitbuf.cpp  bitbuf.h  checksum_crc.cpp  coordsize.h  datafragments.h  lzss.cpp  lzss.h  newbitbuf.cpp  platform.h  proto_oob.h  protocol.h  utlmemory.h
include/netmessage/: inetmessage.h  netmessages.h  netmessages_signon.h  splitmessage.hpp  subchannel.hpp  supplement.pb.cc  supplement.pb.h  usermsghandler.hpp
tools/st_crc/: README.md
tools/st_crc/gamedata/: st_crc.games.txt
tools/st_crc/scripting/: st_crc.sp
tools/ticketgen/: CMakeLists.txt  README.md  build.bat  ticketgen.cpp
